[gd_scene load_steps=5 format=3 uid="uid://jyv4g54adkmo"]

[ext_resource type="Script" uid="uid://xiphbph8v88o" path="res://ui/overlays/pause_overlay.gd" id="1_q2yda"]
[ext_resource type="PackedScene" uid="uid://nbaodrlopo7y" path="res://ui/components/game_settings.tscn" id="2_n78uc"]
[ext_resource type="AudioStream" uid="uid://d4k7aggoegl6x" path="res://assets/Sounds/SFX/UIHover.mp3" id="3_dypxm"]
[ext_resource type="AudioStream" uid="uid://djbgioq2j2lud" path="res://assets/Sounds/SFX/UIPress.mp3" id="4_chcfv"]

[node name="PauseOverlay" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2yda")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
theme_type_variation = &"VboxContainerSmallMargin"
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Paused"
horizontal_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = -8

[node name="GameSettings" parent="VBoxContainer3/SettingsContainer" instance=ExtResource("2_n78uc")]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer3/SettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "back"

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "resume"

[node name="SettingsButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "settings"

[node name="ExitButton" type="Button" parent="VBoxContainer3/MenuContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit"

[node name="UiHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dypxm")
volume_db = -5.0
bus = &"Sound"

[node name="UiPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_chcfv")
volume_db = -5.0
bus = &"Sound"
